# TruyVanSQL

./: Cargo.toml  README.md
assets/: Cargo.toml
assets/src/: icon.rs  lib.rs
cli/: Cargo.toml
cli/src/: main.rs
desktop/: .rules  Cargo.toml  README.md
desktop/src/: action.rs  main.rs
desktop/src/component/: README.md  mod.rs  sidebar_menu_item.rs  tab.rs
desktop/src/connection/: connection_store.rs  database_connection.rs  mod.rs  model.rs  store.rs
desktop/src/panel/: mod.rs  sidebar.rs  titlebar.rs
desktop/src/panel/tab/: mod.rs  tab_bar.rs  tab_item.rs  tab_manager.rs
desktop/src/panel/tab_content/: mod.rs
desktop/src/panel/tab_content/sql_editor/: mod.rs  output_content.rs  query_editor.rs  query_results.rs  query_session.rs  query_table_delegate.rs  query_toolbar.rs  sql_editor_tab.rs
desktop/src/panel/tab_content/table_viewer/: mod.rs  table_viewer_tab.rs
desktop/src/shared/: mod.rs
desktop/src/shared/smart_data_grid/: data_changeset_builder.rs  delegate.rs  grid_delegate.rs  grid_error.rs  grid_state.rs  mod.rs  script_generator.rs  smart_data_grid.rs  state.rs
desktop/src/tab_sql_editor/: editor.rs  mod.rs  results.rs  session.rs  state.rs  table_delegate.rs  toolbar.rs
desktop/src/tab_table_viewer/: mod.rs
desktop/src/theme/: mica.rs  mod.rs
desktop/src/window/: connection_window.rs  mod.rs
desktop/src/workspace/: mod.rs  sidebar.rs  tab_bar.rs  tab_item.rs  tab_manager.rs  title_bar.rs  workspace.rs
docs/: architecture.md
docs/gpui/: action.md  component.md  note.md  overview.md
engine/: .rules  Cargo.toml  README.md
engine/src/: config.rs  error.rs  lib.rs  sql_client.rs
engine/src/database_config/: database_config.rs  file_db_config.rs  kind.rs  mod.rs  network_db_config.rs
engine/src/driver/: mod.rs  postgres.rs  sqlite.rs
engine/src/result/: column.rs  mod.rs  query_result.rs  row.rs  value.rs
engine/src/schema/: column_info.rs  foreign_key_info.rs  index_info.rs  mod.rs  modification.rs  primary_key.rs  table_brief.rs  table_info.rs  table_kind.rs
engine/tests/: sqlite_integration.rs
gui/: Cargo.toml
gui/src/: action.rs  app.rs  main.rs  query_table_delegate.rs  state.rs  window_state.rs
gui/src/panel/: execute_bar.rs  mod.rs  output_panel.rs  sql_editor.rs  titlebar.rs
gui/src/service/: connection_service.rs  mod.rs  query_service.rs
gui/src/util/: mod.rs
themes/: truyvansql.json
