[workspace]
resolver = "3"
members = ["assets", "cli", "desktop", "engine"]

[workspace.dependencies]
anyhow = "1.0"
assets = { path = "assets" }
engine = { path = "engine" }
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-macros = { git = "https://github.com/longbridge/gpui-component" }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
