[package]
name = "assets"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-component-macros = { workspace = true }
rust-embed = { version = "8.11.0", features = [
  "include-exclude",
  "interpolate-folder-path"
] }
