[package]
name = "desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
assets = { workspace = true }
engine = { workspace = true }
futures = "0.3"
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = [
  "font-kit"
] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
tokio.workspace = true
