[package]
name = "desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
assets = { workspace = true }
engine = { workspace = true }
futures = "0.3"
gpui = { workspace = true, features = ["default"] }
gpui-component = { workspace = true }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = [
  "font-kit"
] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = { version = "0.6", optional = true }
windows = { version = ">=0.59, <=0.62", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm"
], optional = true }

[features]
default = []
mica = ["dep:raw-window-handle", "dep:windows"]
