[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
engine = { path = "../engine" }
tokio = { workspace = true }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
